--- a/polybar/hack/modules.ini
+++ b/polybar/hack/modules.ini
@@ -163,13 +163,13 @@ format-full-prefix = 
 ;   %percentage% (default)
 ;   %time%
 ;   %consumption% (shows current charge rate in watts)
-label-charging = "%percentage%% (%time%)"
+label-charging = "%percentage%%"
 
 ; Available tokens:
 ;   %percentage% (default)
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
-label-discharging = "%percentage%% (%time%)"
+label-discharging = "%percentage%%"
 
 ; Available tokens:
 ;   %percentage% (default)
@@ -371,7 +371,7 @@ interval = 1.0
 ;;date = %Y-%m-%d%
 
 ; Optional time format
-time =  TAYGA SHANTI ANANTARAM
+time =TAYGA SHANTI ANANTARAM   
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
