--- a/polybar/hack/modules.ini
+++ b/polybar/hack/modules.ini
@@ -895,7 +895,7 @@ format-disconnected-prefix = 睊
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = "%{A1:networkmanager_dmenu &:} %essid%  %downspeed% 祝 %upspeed%%{A} (%local_ip%)"
+label-connected = "%{A1:networkmanager_dmenu &:} %essid%  %downspeed% 祝 %upspeed%%{A}"
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
